--- a/code-snapshots/02-essentials/32-pipes/src/app/app.component.css
+++ b/code-snapshots/02-essentials/32-pipes/src/app/app.component.css
@@ -13,7 +13,7 @@ main {
   padding: 0;
   display: flex;
   gap: 0.5rem;
-  overflow: scroll;
+  overflow: auto;
 }
 
 #fallback {
